# mars

./: .gitignore  Makefile  Modelfile  README.md  TODO.md  chat.json  cyberpunk.json  fehlende_psychopharmakologie.txt  fehlende_vorgeschichte_und_forensische_anamnese.txt  fehlender_verlauf.docx.txt  lab.py  launch.sh  logic.md  main.aux  main.bcf  openhermes.txt  pyproject.toml  result.md  t.txt  test.md  text.txt  text_0.txt  text_1.txt  text_2.txt  text_3.txt  text_4.txt  text_5.txt  text_6.txt
.github/workflows/: ci.yml
data/: austrittsbericht_fehlende_psychopharmakologie.json  austrittsbericht_fehlende_psychopharmakologie.txt  austrittsbericht_fehlende_substanzanamnese.json  austrittsbericht_fehlende_vorgeschichte.docx  austrittsbericht_fehlende_vorgeschichte.json  austrittsbericht_fehlende_vorgeschichte.txt  austrittsbericht_fehlender_verlauf.json  austrittsbericht_fehlender_verlauf.txt  austrittsbericht_unvollstaendige_diagnosen.json  austrittsbericht_vollstaendig_mit_anmerkungen.json  austrittsbericht_vollstaendig_mit_anmerkungen.txt  austrittsbericht_vollstaendig_ohne_anmerkungen.json  chat.json  fehlende_psychopharmakologie.docx.txt  fehlender_verlauf.xml  ge_missing_substanzamnese.md  ge_missing_vorgeschichte.md  result.json  resultsaustrittsbericht_fehlende_psychopharmakologie.json  resultsaustrittsbericht_fehlende_substanzanamnese.json  resultsaustrittsbericht_fehlende_vorgeschichte.json  resultsaustrittsbericht_fehlender_verlauf.json  resultsaustrittsbericht_unvollstaendige_diagnosen.json  resultsaustrittsbericht_vollstaendig_mit_anmerkungen.json  resultsaustrittsbericht_vollstaendig_ohne_anmerkungen.json  vollstaendig_mit_anmerkungen.txt
data/doc_extracts/: fehlende_substanzanamnese.docx.txt  vollstaendig_ohne_anmerkungen.docx.txt
data/docx_extracts/: fehlende_vorgeschichte.docx.txt  unvollstaendige_diagnosen.docx.txt
data/docxs/: .~lock.fehlende_psychopharmakologie.docx#  .~lock.fehlender_verlauf.docx#  austrittsbericht_unvollstaendige_diagnosen.docx
data/examples/: .~lock.vollstaendig_ohne_anmerkungen.docx#
data/md_reports/: fehlende_psychopharmakologie.md  fehlende_substanzanamnese.md  fehlende_vorgeschichte.md  fehlender_verlauf.md  ge_missing_psychopharmakologie_1.md  ge_missing_psychopharmakologie_2.md  unvollstaendige_diagnosen.md  vollstaendig_mit_anmerkungen.md  vollstaendig_ohne_anmerkungen.md
data/splits/: ge_missing_psychopharmakologie_0.md
data/text/: austrittsbericht_fehlende_psychopharmakologie_strip.txt  austrittsbericht_fehlende_substanzanamnese.txt  austrittsbericht_unvollstaendige_diagnosen.txt  austrittsbericht_vollstaendig_ohne_anmerkungen.txt  substanz.txt  verlauf.txt  vorgeschichte.txt
data/text_reports/: fehlende_psychopharmakologie.txt  fehlende_substanzanamnese.txt  fehlende_vorgeschichte.txt  fehlender_verlauf.txt  unvollstaendige_diagnosen.txt  vollstaendig_ohne_anmerkungen.txt
data/texts/: complete.txt  en_complete.txt  en_incomplete_diagnosen.txt  en_missing_psychopharmakologie.txt  en_missing_substanzamnese.txt  en_missing_verlauf.txt  en_missing_vorgeschichte.txt  fehlende_psychopharmakologie.txt  fehlende_substanzanamnese.txt  fehlende_vorgeschichte.txt  (+25 more)
docs/: prompt_engineering.md  temperature.md
examples/: fehlende_psychopharmakologie.docx  fehlende_substanzanamnese.docx  fehlende_substanzanamnese.md  fehlende_vorgeschichte.md  fehlender_verlauf.docx  vollstaendig_mit_anmerkungen.docx  vollstaendig_ohne_anmerkungen.docx
frontend/: index.html  package-lock.json  package.json
lab/: lab.py  lab.txt  lab1.py  lab10.md  lab11.md  lab13.md  lab16_kant.md  lab17.md  lab18_fake.md  lab19_agent.md  lab1_ai.md  lab1_math.md  lab1_platon.md  lab2.py  lab3.py  lab30.md  lab3_goedel.md  lab3_no_plan.md  lab3_no_scenario.md  lab_kurt.md  lab_peano.md  lab_self.md  logic_llama.md  logic_r1.md  pl.py
mars/: __init__.py  __main__.py  app.py  conf.py  decision.py  main.py  mars.py  prompts.toml  schemas.py  service.py  sys_prompts.toml  system_messages.toml
scripts/: inject_version.py  lab4.py  run_eval.py
static/: styles.css
templates/: chat.html  index.html
thesis/: Makefile  introduction.tex  main.aux  main.bbl  main.bcf  main.blg  main.out  main.tex  main.tex.blg  main.toc  references.bib
(+261 files in other folders)
