[project]
name = "mars"
version = "0.1.16"
description = ""
authors = [
    {name = "Noe Javet",email = "np.javet@gmail.com"}
]
readme = "README.md"
requires-python = "=3.12.10"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "pdfplumber (>=0.11.6,<0.12.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "langchain (>=0.3.24,<0.4.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "ollama (>=0.4.8,<0.5.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "mammoth (>=1.9.0,<2.0.0)",
    "protobuf (>=6.30.2,<7.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "tinydb (>=4.8.2,<5.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "accelerate (>=1.7.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
mars = "mars.main:run_app"
eval = "mars.main:run_eval"

[tool.poetry.group.dev.dependencies]
httpx = {extras = ["http2"], version = "^0.28.1"}
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
