[project]
name = "mars"
version = "0.2.1"
description = ""
authors = [
    {name = "Noe Javet",email = "np.javet@gmail.com"}
]
readme = "README.md"
requires-python = "=3.12.10"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "ollama (>=0.4.8,<0.5.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "tinydb (>=4.8.2,<5.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "ipython (>=9.3.0,<10.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mars = "mars.main:run_app"
eval = "mars.main:run_eval"

[tool.poetry.group.dev.dependencies]
httpx = {extras = ["http2"], version = "^0.28.1"}
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
